@@ -1,0 +1,4 @@
+ * Reads the output of wrap(1) and prepends the leading whitespace and comment
+ * characters back to each line.
+ */
+static void read_wrap( void ) {
